# ch32v103-usb

./: .gitignore  Cargo.toml  Makefile  README.md  USB12M_pulseview.pvs
cdc/: Cargo.toml  Makefile
cdc/.cargo/: config.toml
cdc/src/: main.rs  ring_buffer.rs
cdc/src/usb/: descriptor.rs  handler.rs  mod.rs  usb_serial.rs
hid/: Cargo.toml  Makefile  USB_pulseview.sr  build.rs  memory.x
hid-keyboard/: Cargo.toml  Makefile  README.md  keyboard_report.hex  keyboard_report.txt
hid-keyboard/src/: main.rs  ring_buffer.rs
hid-keyboard/src/usb/: descriptor.rs  handler.rs  hid_keyboard.rs  mod.rs
hid-mouse/: Cargo.toml  Makefile  USB12M_pulseview.sr  USB_pulseview.pvs
hid-mouse/src/: main.rs
hid-mouse/src/usb/: descriptor.rs  handler.rs
hid/src/: main.rs
hid/src/usb/: descriptor.rs  handler.rs  hid_mouse.rs  mod.rs
src/: main.rs
